--- a/DigitizingDataWebService/DigitizingDataWebService.csproj
+++ b/DigitizingDataWebService/DigitizingDataWebService.csproj
@@ -41,6 +41,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>.\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Oracle.DataAccess, Version=2.102.2.20, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\Oracle.DataAccess.dll</HintPath>
@@ -65,18 +68,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DigitizingDataRestfulService.svc" />
-    <Content Include="DigitizingDataService.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContracts.cs" />
     <Compile Include="DigitizingDataRestfulService.svc.cs">
       <DependentUpon>DigitizingDataRestfulService.svc</DependentUpon>
     </Compile>
-    <Compile Include="DigitizingDataService.svc.cs">
-      <DependentUpon>DigitizingDataService.svc</DependentUpon>
-    </Compile>
     <Compile Include="IDigitizingDataRestfulService.cs" />
-    <Compile Include="IDigitizingDataService.cs" />
     <Compile Include="OracleDatabaseHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VslaUtils.cs" />
@@ -85,6 +86,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\DD_file_publish.pubxml" />
     <None Include="Properties\PublishProfiles\DD_Publish.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
