--- a/DigitizingDataWebService/DigitizingDataWebService.csproj
+++ b/DigitizingDataWebService/DigitizingDataWebService.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DigitizingDataWebService</RootNamespace>
     <AssemblyName>DigitizingDataWebService</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -30,6 +30,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,15 +39,12 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>.\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Oracle.DataAccess, Version=2.102.2.20, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\Oracle.DataAccess.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.DynamicData" />
@@ -78,8 +76,6 @@
       <DependentUpon>DigitizingDataRestfulService.svc</DependentUpon>
     </Compile>
     <Compile Include="IDigitizingDataRestfulService.cs" />
-    <Compile Include="MssqlDatabaseHelper.cs" />
-    <Compile Include="OracleDatabaseHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VslaUtils.cs" />
   </ItemGroup>
@@ -95,6 +91,16 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DigitizingDataBizLayer\DigitizingDataBizLayer.csproj">
+      <Project>{fa8a75d7-36d2-4a5a-aa7c-fe2e1e740d9b}</Project>
+      <Name>DigitizingDataBizLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DigitizingDataDomain\DigitizingDataDomain.csproj">
+      <Project>{d1e074dc-fe82-45fe-b8f3-e3d66e3ae91d}</Project>
+      <Name>DigitizingDataDomain</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
