--- a/DigitizingDataDomain/DigitizingDataDomain.csproj
+++ b/DigitizingDataDomain/DigitizingDataDomain.csproj
@@ -69,13 +69,29 @@
     <Compile Include="Helpers\NHibernateHelper.cs" />
     <Compile Include="Mapping\AddressInfoMap.cs" />
     <Compile Include="Mapping\AdminUserMap.cs" />
+    <Compile Include="Mapping\AttendanceMap.cs" />
     <Compile Include="Mapping\DataSubmissionMap.cs" />
+    <Compile Include="Mapping\LoanIssueMap.cs" />
+    <Compile Include="Mapping\LoanRepaymentMap.cs" />
+    <Compile Include="Mapping\MeetingMap.cs" />
+    <Compile Include="Mapping\MemberMap.cs" />
+    <Compile Include="Mapping\SavingMap.cs" />
+    <Compile Include="Mapping\VslaCycleMap.cs" />
+    <Compile Include="Mapping\VslaDdActivationMap.cs" />
     <Compile Include="Mapping\VslaMap.cs" />
     <Compile Include="Mapping\VslaRegionMap.cs" />
     <Compile Include="Model\AddressInfo.cs" />
     <Compile Include="Model\AdminUser.cs" />
+    <Compile Include="Model\Attendance.cs" />
     <Compile Include="Model\DataSubmission.cs" />
+    <Compile Include="Model\LoanIssue.cs" />
+    <Compile Include="Model\LoanRepayment.cs" />
+    <Compile Include="Model\Meeting.cs" />
+    <Compile Include="Model\Member.cs" />
+    <Compile Include="Model\Saving.cs" />
     <Compile Include="Model\Vsla.cs" />
+    <Compile Include="Model\VslaCycle.cs" />
+    <Compile Include="Model\VslaDdActivation.cs" />
     <Compile Include="Model\VslaRegion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
