--- a/DigitizingDataBizLayer/DigitizingDataBizLayer.csproj
+++ b/DigitizingDataBizLayer/DigitizingDataBizLayer.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AttendanceRepo.cs" />
     <Compile Include="Repositories\DataSubmissionRepo.cs" />
+    <Compile Include="Repositories\FineRepo.cs" />
     <Compile Include="Repositories\LoanIssueRepo.cs" />
     <Compile Include="Repositories\LoanRepaymentRepo.cs" />
     <Compile Include="Repositories\MeetingRepo.cs" />
