--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\DigitizingDataBizLayer\packages.config" />
   <repository path="..\DigitizingDataDomain\packages.config" />
+  <repository path="..\DigitizingWebAdminApp\packages.config" />
 </repositories>
