--- a/DigitizingDataAdminApp/Web.config
+++ b/DigitizingDataAdminApp/Web.config
@@ -38,6 +38,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="GridMvc" />
       </namespaces>
     </pages>
   </system.web>
