--- a/DigitizingDataAdminApp/Web.config
+++ b/DigitizingDataAdminApp/Web.config
@@ -27,8 +27,11 @@
     </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Login/Index" name=".ASPXFORMSAUTH" timeout="90" protection="All" slidingExpiration="true" />
     </authentication>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
