--- a/DigitizingDataAdminApp/Web.config
+++ b/DigitizingDataAdminApp/Web.config
@@ -75,6 +75,5 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AGGREY-PC;initial catalog=ledgerlink;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AGGREY-PC;initial catalog=ledgerlink;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
