Some files changed as a result of migrating and cloning to a new development machine

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\DigitizingDataAdminApp\packages.config" />
+  <repository path="..\DigitizingDataAdminWebService\packages.config" />
   <repository path="..\DigitizingDataBizLayer\packages.config" />
   <repository path="..\DigitizingDataDomain\packages.config" />
 </repositories>
