--- a/DigitizingDataAdminApp/Web.config
+++ b/DigitizingDataAdminApp/Web.config
@@ -48,9 +48,9 @@
     </pages>
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
     <validation validateIntegratedModeConfiguration="false" />
-    <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true"/>
+    <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -84,6 +84,6 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AGGREY-PC;initial catalog=ledgerlink;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JMSOFT\SQLEXPRESS;initial catalog=ledgerlink;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
