--- a/DigitizingDataAdminWebService/DigitizingDataAdminWebService.csproj
+++ b/DigitizingDataAdminWebService/DigitizingDataAdminWebService.csproj
@@ -39,8 +39,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -64,27 +70,111 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attendance.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Audit_Log.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Cbt_info.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Constants.cs" />
     <Compile Include="DataContracts.cs" />
+    <Compile Include="DataSubmission.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataSubmission_20140113.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataSubmission_20140113_2.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
     <Compile Include="DigitizingDataRestfulWebService.svc.cs">
       <DependentUpon>DigitizingDataRestfulWebService.svc</DependentUpon>
     </Compile>
+    <Compile Include="Fine.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
     <Compile Include="IDigitizingDataRestfulWebService.cs" />
-    <Compile Include="ledgerlink.designer.cs">
+    <Compile Include="ledgerlink.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ledgerlink.dbml</DependentUpon>
+      <DependentUpon>ledgerlink.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="PasswordHashing.cs" />
+    <Compile Include="ledgerlink.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ledgerlink.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ledgerlink.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="LoanIssue.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LoanRepayment.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Meeting.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Member.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Saving.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="StatusType.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UserPermission.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Vsla.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VslaCycle.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VslaDdActivation.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VslaRegion.cs">
+      <DependentUpon>ledgerlink.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ledgerlink.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>ledgerlink.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
+    <Content Include="packages.config" />
+    <EntityDeploy Include="ledgerlink.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ledgerlink.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="ledgerlink.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ledgerlink.edmx</DependentUpon>
+      <LastGenOutput>ledgerlink.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="ledgerlink.edmx.diagram">
+      <DependentUpon>ledgerlink.edmx</DependentUpon>
+    </Content>
+    <Content Include="ledgerlink.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ledgerlink.edmx</DependentUpon>
+      <LastGenOutput>ledgerlink.cs</LastGenOutput>
     </Content>
     <None Include="Properties\PublishProfiles\ledgerlinkmanager_webservices.pubxml" />
     <None Include="Web.Debug.config">
@@ -96,11 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ledgerlink.dbml.layout">
-      <DependentUpon>ledgerlink.dbml</DependentUpon>
-    </None>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
