updated the database entities to cater for the new fields/table added to the database

--- a/DigitizingDataAdminApp/Web.config
+++ b/DigitizingDataAdminApp/Web.config
@@ -84,6 +84,6 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JMSOFT\SQLEXPRESS;initial catalog=ledgerlink;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JMSOFT\SQLEXPRESS;initial catalog=ledgerlink;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="ledgerlinkEntities" connectionString="metadata=res://*/Models.ledgerlink.csdl|res://*/Models.ledgerlink.ssdl|res://*/Models.ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JMSOFT\SQLEXPRESS;initial catalog=ledgerlink;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
