--- a/DigitizingDataAdminWebService/Web.config
+++ b/DigitizingDataAdminWebService/Web.config
@@ -5,10 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="ledgerlinkConnectionString" connectionString="Data Source=AGGREY-PC;Initial Catalog=ledgerlink;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />-->
-    <add name="ledgerlinkEntities" connectionString="metadata=res://*/ledgerlink.csdl|res://*/ledgerlink.ssdl|res://*/ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JMSOFT\SQLEXPRESS;initial catalog=ledgerlink;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="ledgerlinkEntities" connectionString="metadata=res://*/ledgerlink.csdl|res://*/ledgerlink.ssdl|res://*/ledgerlink.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JMSOFT\SQLEXPRESS;initial catalog=ledgerlink;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
