Added new File for viewing weekly meetings since 29-07-2014

--- a/DigitizingDataAdminApp/DigitizingDataAdminApp.csproj
+++ b/DigitizingDataAdminApp/DigitizingDataAdminApp.csproj
@@ -292,6 +292,7 @@
     <Compile Include="Models\VslaRegion.cs">
       <DependentUpon>ledgerlink.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\WeeklyMeetingsSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -558,6 +559,7 @@
     <Content Include="Views\Dashboard\MemberDetails.cshtml" />
     <Content Include="Views\Dashboard\SingleMeetingDetails.cshtml" />
     <Content Include="Views\Shared\Date.cshtml" />
+    <Content Include="Views\Dashboard\DatabaseScriptedInformation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
