--- a/DigitizingDataAdminWebService/DigitizingDataAdminWebService.csproj
+++ b/DigitizingDataAdminWebService/DigitizingDataAdminWebService.csproj
@@ -70,7 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DigitizingDataRestfulWebService.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attendance.cs">
