Added file to decoded the incoming data as RAW data, instead of json that is throwing errors

--- a/DigitizingDataAdminWebService/DigitizingDataAdminWebService.csproj
+++ b/DigitizingDataAdminWebService/DigitizingDataAdminWebService.csproj
@@ -134,6 +134,7 @@
       <DependentUpon>ledgerlink.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RawContentTypeMapper.cs" />
     <Compile Include="Saving.cs">
       <DependentUpon>ledgerlink.tt</DependentUpon>
     </Compile>
